--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 
 <head>
-  <title>CSS Display Property Example</title>
+  <title>BENS FUCKING WEBSITE!!!!!!!!!</title>
   <style>
     p {
       color: white;
@@ -39,7 +39,7 @@
 
 
 <body>
-  <h1>CSS Display Property</h1>
+  <h1>BENS FUCKING WEBSITE!!!</h1>
   <p class="red">Red Paragraph </p>
   <p class="green">Green Paragraph</p>
   <p class="blue">Blue Paragraph</p>
