--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 <body>
   <h1>BENS FUCKING WEBSITE!!!</h1>
-  <p class="red">Red Paragraph </p>
-  <p class="green">Green Paragraph</p>
-  <p class="blue">Blue Paragraph</p>
+  <p class="red">A block of red </p>
+  <p class="green">green block </p>
+  <p class="blue">you get the gist </p>
 </body>
 
 </html>
