--- a/index.html
+++ b/index.html
@@ -1,48 +1,150 @@
 <!DOCTYPE html>
-<html>
-
-<!-- 
-  TODO
-1. By changing only the display property of the CSS make all 3 squares line up horizontally like in goal1 image.
-2. Change only the display property to make all 3 squares line up vertically like in goal2 image. 
--->
-
+<html lang="en">
 <head>
-  <title>BENS FUCKING WEBSITE!!!!!!!!!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Glitch Effect Example</title>
   <style>
-    p {
+    body {
+      background: #0a0a0a;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    #glitch-container .content {
+      font-family: monospace;
+      margin: auto;
       color: white;
+      padding: 10%;
     }
 
-    .red {
-      display: block;
-      width: 200px;
-      height: 200px;
-      background-color: red;
+    #glitch-container #title {
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 4em;
+      border-bottom: solid 1px white;
     }
 
-    .green {
-      display: block;
-      width: 200px;
-      height: 200px;
-      background-color: green;
+    #glitch-container #text {
+      text-align: left;
+      font-size: 1.25em;
+      text-transform: lowercase;
     }
 
-    .blue {
-      display: block;
-      width: 200px;
-      height: 200px;
-      background-color: blue;
+    #glitch-container #credits {
+      text-align: center;
+      font-size: 1em;
+      color: #bbb;
     }
   </style>
 </head>
-
-
 <body>
-  <h1>BENS FUCKING WEBSITE!!!</h1>
-  <p class="red">A block of red </p>
-  <p class="green">green block </p>
-  <p class="blue">you get the gist </p>
-</body>
+  <div id="glitch-container">
+    <div class="content" id="title">Ben Allison</div>
+    <div class="content" id="text">
+      numinous euro-pop hacker plastic geodesic realism sprawl. Tokyo tube assassin fetishism concrete weathered San Francisco...
+    </div>
+    <div class="content" id="credits">Text generated from loremgibson.org</div>
+  </div>
 
+  <script>
+    const chars = "☺Σ×Π#-_¯—→↓↑←0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZ";
+
+    var Glitch = function(selector, index, numberOfGlitchedLetter, timeGlitch, timePerLetter, timeBetweenGlitch){
+      this.selector = selector;
+      this.index = index;
+      this.numberOfGlitchedLetter = numberOfGlitchedLetter;
+      this.innerText;
+      this.charArray = [];
+      this.charIndex = [];
+      this.timeGlitch = timeGlitch;
+      this.timeBetweenGlitch = timeBetweenGlitch;
+      this.timePerLetter = timePerLetter;
+      this.maxCount = Math.floor(this.timeGlitch/this.timePerLetter);
+      this.count = 0;
+    }
+
+    Glitch.prototype.init = function(){
+      this.innerText = this.selector.innerText;
+      this.charArray = this.innerText.split("");
+      if(this.numberOfGlitchedLetter == undefined || this.numberOfGlitchedLetter > this.innerText.length){
+        this.numberOfGlitchedLetter = this.innerText.length;
+      }
+      this.defineCharIndexToRandomize();
+    }
+
+    Glitch.prototype.defineCharIndexToRandomize = function(){
+      this.charIndex = [];
+      for(let i=0; i<this.numberOfGlitchedLetter; i++){
+        let randCharIndex = Math.floor(Math.random() * this.charArray.length);
+        this.charIndex.push(randCharIndex);
+      }
+    }
+
+    Glitch.prototype.randomize = function(){
+      //copy the char array
+      let randomString = Array.from(this.charArray);
+
+      //randomize char
+      for(let i=0; i<this.numberOfGlitchedLetter; i++){
+        let randIndex = Math.floor(Math.random() * chars.length);
+        let randCharIndex = this.charIndex[i];
+        if(randomString[randCharIndex] !== ' '){
+          randomString[randCharIndex] = chars[randIndex];
+        }
+      }
+      this.selector.innerText = randomString.join("");
+    }
+
+    Glitch.prototype.update = function(interval){
+      if(this.count >= this.maxCount - 1){
+        this.selector.innerText = this.innerText;
+        this.defineCharIndexToRandomize();
+        let ctx = this;
+        let wait = setTimeout(function(){
+          ctx.count = 0;
+        }, this.timeBetweenGlitch);
+      }else{
+        this.randomize();
+        this.count ++;
+      }
+    }
+
+    Glitch.prototype.glitch = function(){
+      let ctx = this;
+      let interval= setInterval(function(){
+        ctx.update(this);
+      },this.timePerLetter);
+    }
+
+    var arrayElements;
+    var glitchArray = [];
+
+    function initAllGlitch(){
+      // Only select elements inside #glitch-container
+      arrayElements = document.querySelectorAll("#glitch-container .content");
+      for (let i = 0; i < arrayElements.length; i++) {
+        let selector = arrayElements[i];
+        let randLetterNumber = 2 + Math.floor(Math.random() * 8);
+        let randGlitchTime = 500 + Math.floor(Math.random() * 2500);
+        let randGlitchPauseTime = 500 + Math.floor(Math.random() * 2500);
+        let glitch = new Glitch(selector, i, randLetterNumber, 200, 65, randGlitchPauseTime);
+        glitch.init();
+        glitchArray.push(glitch);
+      }
+    }
+
+    function update(){
+      for (let i = 0; i < glitchArray.length; i++) {
+        let glitch = glitchArray[i];
+        glitch.glitch();
+      }
+    }
+
+    initAllGlitch();
+    update();
+  </script>
+</body>
 </html>
