--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="glitch-container">
     <div class="content" id="title">Ben Allison</div>
     <div class="content" id="text">
-      numinous euro-pop hacker plastic geodesic realism sprawl. Tokyo tube assassin fetishism concrete weathered San Francisco...
+      University of Kentucky Freshman Computer Science major.
     </div>
     <div class="content" id="credits">Text generated from loremgibson.org</div>
   </div>
