--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     #glitch-container #text {
       text-align: left;
       font-size: 1.25em;
-      text-transform: lowercase;
+      text-transform: uppercase;
     }
 
     #glitch-container #credits {
