--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="content" id="text">
       University of Kentucky Freshman Computer Science major.
     </div>
-    <div class="content" id="credits">Text generated from loremgibson.org</div>
+    <div class="content" id="credits">Fill in later</div>
   </div>
 
   <script>
