--- a/index.html
+++ b/index.html
@@ -106,23 +106,22 @@
       setTimeout(function() {
         document.getElementById("load").style.display = "none";
         document.getElementById("glitch-container").style.display = "block";
-        initGlitch();
+        startGlitchEffect();
       }, 2000);
     });
 
-    function initGlitch() {
+    function startGlitchEffect() {
       const chars = "☺Σ×Π#-_¯—→↓↑←0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZ";
       const elements = document.querySelectorAll("#glitch-container .content");
       elements.forEach(element => {
         let originalText = element.innerText;
-        let glitchInterval = setInterval(() => {
-          let glitchedText = originalText.split("").map(char => Math.random() < 0.2 ? chars[Math.floor(Math.random() * chars.length)] : char).join("");
+        setInterval(() => {
+          let glitchedText = originalText.split("").map(char => Math.random() < 0.15 ? chars[Math.floor(Math.random() * chars.length)] : char).join("");
           element.innerText = glitchedText;
-        }, 100);
-        setTimeout(() => {
-          clearInterval(glitchInterval);
-          element.innerText = originalText;
-        }, 3000 + Math.random() * 2000);
+          setTimeout(() => {
+            element.innerText = originalText;
+          }, 200);
+        }, 2000);
       });
     }
   </script>
