--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       color: #35C4F0;
     }
 
+    #load div:nth-child(2) { animation-delay: 0.2s; }
+    #load div:nth-child(3) { animation-delay: 0.4s; }
+    #load div:nth-child(4) { animation-delay: 0.6s; }
+    #load div:nth-child(5) { animation-delay: 0.8s; }
+    #load div:nth-child(6) { animation-delay: 1s; }
+    #load div:nth-child(7) { animation-delay: 1.2s; }
+
     @keyframes move {
       0% { left: 0; opacity: 0; }
       35% { left: 41%; transform: rotate(0deg); opacity: 1; }
@@ -75,20 +82,9 @@
       font-size: 1em;
       color: #bbb;
     }
-
-    /* Background Canvas */
-    .background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-    }
   </style>
 </head>
 <body>
-  <canvas class="background"></canvas>
   <div id="load">
     <div>G</div>
     <div>N</div>
@@ -110,17 +106,64 @@
       setTimeout(function() {
         document.getElementById("load").style.display = "none";
         document.getElementById("glitch-container").style.display = "block";
+        initAllGlitch();
       }, 2000);
     });
 
-    window.onload = function () {
-      Particles.init({
-        selector: ".background",
-        color: ["#03dac6", "#ff0266", "#000000"],
-        connectParticles: true
+    class Glitch {
+      constructor(selector, numberOfGlitchedLetter, timeGlitch, timePerLetter, timeBetweenGlitch) {
+        this.chars = "☺Σ×Π#-_¯—→↓↑←0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZ";
+        this.selector = selector;
+        this.numberOfGlitchedLetter = numberOfGlitchedLetter;
+        this.innerText = selector.innerText;
+        this.charArray = this.innerText.split("");
+        this.charIndex = [];
+        this.timeGlitch = timeGlitch;
+        this.timeBetweenGlitch = timeBetweenGlitch;
+        this.timePerLetter = timePerLetter;
+        this.maxCount = Math.floor(this.timeGlitch / this.timePerLetter);
+        this.count = 0;
+        this.defineCharIndexToRandomize();
+      }
+
+      defineCharIndexToRandomize() {
+        this.charIndex = [];
+        for (let i = 0; i < this.numberOfGlitchedLetter; i++) {
+          let randCharIndex = Math.floor(Math.random() * this.charArray.length);
+          this.charIndex.push(randCharIndex);
+        }
+      }
+
+      randomize() {
+        let randomString = [...this.charArray];
+        this.charIndex.forEach(randCharIndex => {
+          if (randomString[randCharIndex] !== ' ') {
+            randomString[randCharIndex] = this.chars[Math.floor(Math.random() * this.chars.length)];
+          }
+        });
+        this.selector.innerText = randomString.join("");
+      }
+
+      glitch() {
+        const interval = setInterval(() => {
+          if (this.count >= this.maxCount) {
+            this.selector.innerText = this.innerText;
+            this.defineCharIndexToRandomize();
+            clearInterval(interval);
+            setTimeout(() => { this.count = 0; this.glitch(); }, this.timeBetweenGlitch);
+          } else {
+            this.randomize();
+            this.count++;
+          }
+        }, this.timePerLetter);
+      }
+    }
+
+    function initAllGlitch() {
+      document.querySelectorAll("#glitch-container .content").forEach(selector => {
+        new Glitch(selector, 5, 600, 65, 5000).glitch();
       });
-    };
+    }
   </script>
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </body>
 </html>
