Changed load div animation from infinite to 1
animation: move 2s linear infinite;

to 

animation: move 2s linear 1;

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       height: 36px;
       opacity: 0;
       font-family: Helvetica, Arial, sans-serif;
-      animation: move 2s linear infinite;
+      animation: move 2s linear 1;
       transform: rotate(180deg);
       color: #35C4F0;
     }
